# Transazioni_Finanziarie

./: CMakeLists.txt  Calendario.cpp  Calendario.h  Cliente.cpp  Cliente.h  Conto.cpp  Conto.h  Transazioni.cpp  Transazioni.h  main.cpp
test/: CMakeLists.txt  CalendarioTest.cpp  ClientTest.cpp  ContoTest.cpp  Transazione_Fixture.cpp  TransazioniTest.cpp
